--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -26,7 +26,7 @@ p {
 }
 
 .image-button {
-  background-color: #6c5ce7;
+  background-color: #FEBC4E;
   -moz-border-radius: 42px;
   -webkit-border-radius: 42px;
   border-radius: 42px;
@@ -181,26 +181,33 @@ a:hover {
 
 .open-question-card {
   width: 23vw;
-  border: 2px solid #6c5ce7;
+  border: 2px solid #000;
   border-radius: 15px;
 }
 
-.question-card-text {
+.question-card-title {
   color: #6c5ce7;
+}
+
+.question-card-text {
+  color: #000;
   font-size: 1.2em
 }
 
 .question-btn {
-  background-color: #6c5ce7
+  background-color: #FEBC4E;
+  border-color: #FEBC4E;
 }
 
 .question-btn:hover {
-  color: #6c5ce7;
+  color: #FEBC4E;
+  border-color: #FEBC4E;
   background-color: #fff
 }
 
 .question-btn:active:focus {
-  color: #6c5ce7 !important;
+  color: #FEBC4E !important;
+  border-color: #FEBC4E !important;
   background-color: #fff !important;
 }
 
@@ -226,7 +233,7 @@ a:hover {
 
 .landing-description {
   margin-top: 3vh;
-  color: #494967; 
+  color: #646464; 
   text-align: center;
   font-size: 2em
 }
