make all interview questions look better

--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -1,9 +1,21 @@
 body {
+  background-image: url(/static/images/example_background.png);
+  background-repeat: repeat
+}
+
+hr { display: block; height: 1px;
+    border: 0; border-top: 1px solid #6c5ce7;
+    margin: 1em 0; padding: 0; }
+
+.page-container {
+    max-width: 90vw;
+    min-height: 90vh;
+    margin-top: 10vh;
     background: #FFF;
 }
 
 .question-card-title {
-    text-align: center;
+    float:left;
     font-size: 1.3em;
     font-weight: bold;
 }
@@ -27,7 +39,14 @@ body {
 }
 
 .question-box {
-    border: 2px solid #6c5ce7;
+    border: none;
+    display:inline-block;
+}
+
+.centered {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .create-section-title {
@@ -40,8 +59,9 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    color: #6c5ce7;
-    border: 1px solid #6c5ce7;
+    background: #FEBC4E;
+    color: #FFF;
+    border: 1px solid #FEBC4E;
 }
 
 .create-section-button:hover {
@@ -50,8 +70,9 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background: #6c5ce7;
-    border: 1px solid #6c5ce7;
+    color: #FEBC4E;
+    background: #FFF;
+    border: 1px solid #FEBC4E;
 }
 
 .create-section-button:active:focus {
@@ -60,8 +81,9 @@ body {
     display: block !important;
     margin-left: auto !important;
     margin-right: auto !important;
-    background: #6c5ce7 !important;
-    border: 1px solid #6c5ce7 !important;
+    color: #FEBC4E !important;
+    background: #FFF !important;
+    border: 1px solid #FEBC4E !important;
 }
 
 .create-section {
@@ -70,7 +92,7 @@ body {
 }
 
 .page-title {
-    color: #6c5ce7;
+    color: #000;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
