--- a/static/interview/all_created_questions.css
+++ b/static/interview/all_created_questions.css
@@ -31,11 +31,13 @@ hr { display: block; height: 1px;
 .question-card-button:hover {
     color: #FFF;
     background-color: #6c5ce7;
+    border: 1px solid #6c5ce7 !important;
 }
 
 .question-card-button:active:focus {
     color: #FFF !important;
     background-color: #6c5ce7 !important;
+    border: 1px solid #6c5ce7 !important;
 }
 
 .question-box {
@@ -108,4 +110,8 @@ hr { display: block; height: 1px;
     margin-right: auto;
     content: block;
     text-align: center;
+}
+
+.enlarged-text {
+    font-size: 1.4em;
 }
