--- a/static/interview/compile_run.css
+++ b/static/interview/compile_run.css
@@ -1,10 +1,11 @@
 body {
-    background: rgb(141, 141, 255);
+    background-image: url(/static/images/example_background.png);
+    background-repeat: repeat;
 }
 
 .question-card-title {
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1.1em;
     font-weight: bold;
     text-align: center;
     margin-left: auto;
@@ -16,69 +17,70 @@ body {
     width: 100%;
 }
 
+.result-card-passed {
+    border: 1px solid #000;
+    background: #DFF0D8;
+}
+
+.result-card-failed {
+    border: 1px solid #000;
+    background: #F2DEDF;
+}
+
 .main-section {
-    padding-top: 70px; 
+    margin-top: 7vh;
+    margin-bottom: 10vh;
     max-width: 90vw;
+    background: #FFF;
+    border-radius: 10px;
 }
 
 .page-title {
-    color: #FFF;
+    color: #000;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    border: 2px solid white;
-    padding-top: 3vh;
-    padding-bottom: 3vh;
-    padding-left: 4vw;
-    padding-right: 4vw;
-}
-
-.passed {
-    color: green;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    content: block;
-    font-size: 1.5em;
-}
-
-.failed {
-    color: red;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    content: block;
-    font-size: 1.5em;
+    margin-bottom: 4vh;
+    font-size: 2.3em;
+    margin-top: 3vh;
+    border-bottom: 2px solid #FEBC4E;
+    padding-bottom: 1vh;
+    max-width: 80%;
 }
 
 .go-back-button {
-    border: 2px solid white;
-    background-color: white;
-    color: white;
-    padding: 1vw 1.5vh;
-    font-size: 1.3em;
-    cursor: pointer;
-    color: white;
-    outline-color: white;
-    background: rgb(141, 141, 255);
+    text-align: center;
+    max-width: 35%;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    content: block;
-    text-align: center;
+    background: #FEBC4E;
+    color: #FFF;
+    border: 1px solid #FEBC4E;
+    margin-bottom: 4vh;
 }
 
 .go-back-button:hover {
-    text-decoration: none;
-    background-color: white;
-    color: rgb(141, 141, 255);
+    text-align: center;
+    max-width: 35%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: #FEBC4E;
+    background: #FFF;
+    border: 1px solid #FEBC4E;
 }
 
 .go-back-button:active:focus {
-    text-decoration: none !important;
-    background-color: white !important;
-    color: rgb(141, 141, 255) !important;
+    text-align: center !important;
+    max-width: 35% !important;
+    display: block !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    color: #FEBC4E !important;
+    background: #FFF !important;
+    border: 1px solid #FEBC4E !important;
 }
-
 
 .file_snippet {
     height: 20vh;
