--- a/static/interview/unanswered_questions.css
+++ b/static/interview/unanswered_questions.css
@@ -7,6 +7,7 @@ body {
     text-align: center;
     font-size: 1.3em;
     font-weight: bold;
+    margin-bottom: .5vh;
 }
 
 .answer-btn {
@@ -30,20 +31,24 @@ body {
     margin-top: 10vh;
     margin-bottom: 10vh;
     padding-top: 70px; 
-    padding-bottom: 7vh;
-    max-width: 90vw;
+    padding-bottom: 3vh;
+    max-width: 94vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
 }
 
 .page-title {
-    color: #6c5ce7;
+    color: #000;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    border-bottom: 2px solid #FEBC4E;
+    max-width: 35%;
 }
 
 .page-description {
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 15%;
+    padding-right: 15%;
     font-size: 1.2em;
     margin-top: 2vh;
     margin-bottom: 3vh;
@@ -64,7 +69,7 @@ hr {
   }
 
 .question-card {
-    border: 2px solid #6c5ce7;
+    border: 1px solid #000;
 }
 
 .open-q-btn {
@@ -96,9 +101,13 @@ hr {
 }
 
 .browse-text {
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 .last-part {
-    margin-top: 12vh;
+    margin-top: 6vh;
+}
+
+.sent-by {
+    font-size: .9em;
 }
