--- a/static/main/css/signup.css
+++ b/static/main/css/signup.css
@@ -1,3 +1,13 @@
+body {
+    background-image: url(/static/images/background_tile.png);
+    background-repeat: repeat
+}
+
+::-webkit-scrollbar {
+    width: 0;
+    background: 0 0
+}  
+
 .btn-primary {
     color: #FFF;
     background-color: #FEBC4E;
@@ -19,7 +29,6 @@
 .action-link {
     font-size: 1.4em;
     text-decoration: none;
-    color: #000;
 }
 
 .action-link:hover {
@@ -36,6 +45,7 @@
 .page-title {
     color: #000;
     font-size: 2em;
+    margin-bottom: 4vh !important;
 }
 
 .footer-text {
@@ -43,20 +53,15 @@
 }
 
 .forgot-password {
-    color: #000;
+    text-decoration: none;
 } 
 
-.forgot-password:hover {
-    color: #6c5ce7;
-    text-decoration: none;
-}
 
 .top-padded {
     margin-top: 2vh;
 }
 
 .alt {
-    color: #6c5ce7;
     text-decoration: none;
 }
 
@@ -66,8 +71,12 @@
     padding-bottom: 10vh;
 }
 
+label {
+    font-size: 1.1em;
+}
+
 @media only screen and (max-width: 900px) {
     .form-body {
-        max-width: 50vw;
+        max-width: 80vw;
     }
-  }
+}
