--- a/static/main/css/homepage.css
+++ b/static/main/css/homepage.css
@@ -383,7 +383,6 @@ a:hover {
   }
 
   .example-answer-section {
-    height: 200vh;
     width: 100vw;
     margin-left: 0;
   }
@@ -395,4 +394,10 @@ a:hover {
   .question-card-title {
     font-size: 1.2em;
   }  
+}
+
+@media only screen and (max-width: 767px) {
+  .example-answer-section {
+    height: 200vh;
+  }
 }
