--- a/static/main/css/answer.css
+++ b/static/main/css/answer.css
@@ -85,23 +85,23 @@ select {
 
 .test-case-button {
     margin-top: 1vh;
-    background-color: #FFF;
-    color: #6c5ce7;
+    background-color: #6c5ce7;
+    color: #FFF; 
     border: 1px solid #6c5ce7;
 }
 
 .test-case-button:hover {
     margin-top: 1vh;
-    background-color: #6c5ce7;
-    color: #FFF;
+    background-color: #FFF;
+    color: #6c5ce7;
     border: 1px solid #6c5ce7;
 }
 
 .test-case-button:active:focus {
     margin-top: 1vh !important;
-    background-color: #6c5ce7 !important;
-    color: #FFF !important;
-    border: 1px solid #6c5ce7 !important;
+    background-color: #FFF !important;
+    color: #6c5ce7 !important;
+    border: 1px solid #FFF !important;
 }
 
 .top-row-right {
@@ -198,10 +198,22 @@ select {
     width: 100%;
     border: 3px solid #6c5ce7;
     padding: 1em;
+    overflow-y:auto;
+}
+
+.actual-editor h1, h2, h3, h4, h5, h6 {
+    letter-spacing: normal;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.actual-editor p {
+    letter-spacing: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
 }
 
 .test-case-editor {
-    height: 25vh;
+    height: 35vh;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
