--- a/static/main/css/base.css
+++ b/static/main/css/base.css
@@ -40,6 +40,10 @@
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(108,92,231, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+.nav-item a:hover{
+    color:#FFBC4D !important;
+}
+
 .copyright {
     font-size: .8em;
     color: #FFF !important;
